Replication Framework/services_creators/yamls-to-apply/paymentservice-apply/paymentservice-deploy-7.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentservice-7
spec:
  selector:
    matchLabels:
      app: paymentservice-7
  template:
    metadata:
      labels:
        app: paymentservice-7
    spec:
      containers:
      - env:
        - name: PORT
          value: '22073'
        - name: DISABLE_PROFILER
          value: '1'
        image: gcr.io/google-samples/microservices-demo/paymentservice:v0.5.0
        livenessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:22073
        name: server
        ports:
        - containerPort: 22073
        readinessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:22073
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - all
          privileged: false
          readOnlyRootFilesystem: true
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
