Replication Framework/services_creators/yamls-to-apply/paymentservice-apply/paymentservice-svc-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: paymentservice-2
spec:
  ports:
  - name: grpc
    port: 53096
    targetPort: 53096
  selector:
    app: paymentservice-2
  type: ClusterIP
