Replication Framework/services_creators/yamls-to-apply/paymentservice-apply/paymentservice-netpol-1-checkoutservice-1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: paymentservice-1-allow-checkoutservice-1
  namespace: attack-graphs
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: checkoutservice-1
    ports:
    - port: 31933
  podSelector:
    matchLabels:
      app: paymentservice-1
